--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div id="btnContainer">
+      <label for="input">Grid Manager </label>
+      <input type="number" id="input" />
+      <button id="btn">Enter</button>
+    </div>
     <div class="container"></div>
   </body>
 </html>
