Change the style and refactor the code
change the style to look more like a sketch pad and refactor the code removing the array as we don't need need it and reduced huge amount of unused or repeating code

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <h1 class="title">Etch-a-Sketch</h1>
     <div id="btnContainer">
-      <label for="input">Grid Manager </label>
-      <input type="number" id="input" />
-      <button id="btn">Enter</button>
+      <label for="input">Grid Size: </label>
+      <input type="range" value="16" min="1" max="64" id="input" />
+      <span id="gridSizeBoard">16 x 16</span>
+      <button id="resetBtn">Reset</button>
     </div>
     <div class="container"></div>
   </body>
